<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:scrollbars="none">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                style="@style/ButtonOrdersFavoriteStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_past_orders_favorite"
                android:id="@+id/btn_past_orders_favorite"/>
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                style="@style/ButtonOrdersNormalStyle"
                android:layout_height="wrap_content"
                android:text="@string/label_past_orders_two_weeks"
                android:id="@+id/btn_past_orders_two_weeks"/>
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonOrdersNormalStyle"
                android:text="@string/label_past_orders_one_month"
                android:id="@+id/btn_past_orders_one_month"/>
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                style="@style/ButtonOrdersNormalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_past_orders_three_months"
                android:id="@+id/btn_past_orders_three_months"/>
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                style="@style/ButtonOrdersNormalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_past_orders_six_months"
                android:id="@+id/btn_past_orders_six_months"/>
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                style="@style/ButtonOrdersNormalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_past_orders_one_year"
                android:id="@+id/btn_past_orders_one_year"/>
            <ir.joorjens.joorapp.customViews.ButtonPlus
                android:layout_marginBottom="8dp"
                style="@style/ButtonOrdersNormalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_past_orders_all"
                android:id="@+id/btn_past_orders_all_by_month"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
